# KyrsWork_2

./: README.md  main.py  pyproject.toml
src/: JSONSaver.py  hhAPI.py  hh_api.py  json_saver.py  user_interaction.py  utils_def.py  vacancies.py
tests/: conftest.py  test_hh_api.py  test_json_saver.py  test_util_def.py  test_vacancies.py
